--- a/aio12/.gitignore
+++ b/aio12/.gitignore
@@ -4,16 +4,8 @@ public/files/
 public/hot
 storage/*.key
 vendor
+node_modules
 app/Models/Auto/
-/.phpunit.cache
-/bootstrap/ssr
-/node_modules
-/public/build
-/public/hot
-/public/storage
-/storage/*.key
-/storage/pail
-/vendor
 .env
 .env.backup
 .env.production
