--- a/aio12/composer.json
+++ b/aio12/composer.json
@@ -11,9 +11,12 @@
     "require": {
         "php": "^8.2",
         "inertiajs/inertia-laravel": "^2.0",
+        "intervention/image": "^3.11",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
-        "tightenco/ziggy": "^2.4"
+        "spatie/laravel-medialibrary": "^11.14",
+        "tightenco/ziggy": "^2.4",
+        "unisharp/laravel-filemanager": "^2.11"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
