--- a/aio12/package.json
+++ b/aio12/package.json
@@ -12,6 +12,7 @@
     },
     "devDependencies": {
         "@eslint/js": "^9.19.0",
+        "@types/lodash": "^4.17.20",
         "@types/node": "^22.13.5",
         "@types/react": "^19.1.9",
         "@types/react-dom": "^19.1.7",
