--- a/aio12/package.json
+++ b/aio12/package.json
@@ -29,6 +29,7 @@
     "dependencies": {
         "@ant-design/icons": "^6.0.0",
         "@dnd-kit/core": "^6.3.1",
+        "@dnd-kit/modifiers": "^9.0.0",
         "@dnd-kit/sortable": "^10.0.0",
         "@headlessui/react": "^2.2.0",
         "@inertiajs/inertia": "^0.11.1",
