--- a/aio12/package.json
+++ b/aio12/package.json
@@ -15,6 +15,7 @@
         "@types/lodash": "^4.17.20",
         "@types/node": "^22.13.5",
         "@types/react": "^19.1.9",
+        "@types/react-beautiful-dnd": "^13.1.8",
         "@types/react-dom": "^19.1.7",
         "eslint": "^9.17.0",
         "eslint-config-prettier": "^10.0.1",
