--- a/aio12/package.json
+++ b/aio12/package.json
@@ -63,6 +63,7 @@
         "laravel-vite-plugin": "^2.0",
         "lodash": "^4.17.21",
         "lodash.clonedeep": "^4.5.0",
+        "lucide-react": "^0.545.0",
         "react": "^18.3.1",
         "react-barcode": "^1.6.1",
         "react-beautiful-dnd": "^13.1.1",
