--- a/aio12/package.json
+++ b/aio12/package.json
@@ -14,6 +14,7 @@
         "@eslint/js": "^9.19.0",
         "@types/lodash": "^4.17.20",
         "@types/node": "^22.13.5",
+        "@types/qrcode.react": "^1.0.5",
         "@types/react": "^19.1.9",
         "@types/react-beautiful-dnd": "^13.1.8",
         "@types/react-dom": "^19.1.7",
@@ -64,6 +65,7 @@
         "lodash": "^4.17.21",
         "lodash.clonedeep": "^4.5.0",
         "lucide-react": "^0.545.0",
+        "qrcode.react": "^4.2.0",
         "react": "^18.3.1",
         "react-barcode": "^1.6.1",
         "react-beautiful-dnd": "^13.1.1",
@@ -74,6 +76,7 @@
         "tailwind-merge": "^3.0.1",
         "tailwindcss": "^4.0.0",
         "tailwindcss-animate": "^1.0.7",
+        "vietqr": "^1.1.9",
         "vite": "^7.0.4"
     },
     "optionalDependencies": {
