--- a/aio12/composer.json
+++ b/aio12/composer.json
@@ -14,6 +14,7 @@
         "intervention/image": "^3.11",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
+        "maatwebsite/excel": "4.x-dev",
         "spatie/laravel-medialibrary": "^11.14",
         "tightenco/ziggy": "^2.4",
         "unisharp/laravel-filemanager": "^2.11"
@@ -83,6 +84,6 @@
             "php-http/discovery": true
         }
     },
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
     "prefer-stable": true
 }
