--- a/aio12/composer.json
+++ b/aio12/composer.json
@@ -17,8 +17,7 @@
         "maatwebsite/excel": "4.x-dev",
         "spatie/laravel-medialibrary": "^11.14",
         "thiagoalessio/tesseract_ocr": "^2.13",
-        "tightenco/ziggy": "^2.4",
-        "unisharp/laravel-filemanager": "^2.11"
+        "tightenco/ziggy": "^2.4"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
