--- a/package.json
+++ b/package.json
@@ -35,9 +35,6 @@
         "@dnd-kit/modifiers": "^9.0.0",
         "@dnd-kit/sortable": "^10.0.0",
         "@headlessui/react": "^2.2.0",
-        "@inertiajs/inertia": "^0.11.1",
-        "@inertiajs/progress": "^0.1.2",
-        "@inertiajs/react": "^2.0.17",
         "@radix-ui/react-avatar": "^1.1.3",
         "@radix-ui/react-checkbox": "^1.1.4",
         "@radix-ui/react-collapsible": "^1.1.3",
@@ -72,6 +69,7 @@
         "react-beautiful-dnd": "^13.1.1",
         "react-dom": "^18.3.1",
         "react-highlight-words": "^0.21.0",
+        "react-router-dom": "^7.9.5",
         "recharts": "^3.1.2",
         "suneditor-react": "^3.6.1",
         "tailwind-merge": "^3.0.1",
