--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,11 @@
     "isolatedModules": true,
     "resolveJsonModule": true,
     "allowSyntheticDefaultImports": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["resources/js/*"]
+    }
   },
   "include": ["resources/js/**/*"]
 }
