--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,16 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:qxur0qbFILMqhGctzK1V910fys2ypSH+zEmj5kVnaEk=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://localhost:8000
 
-APP_LOCALE=en
-APP_FALLBACK_LOCALE=en
-APP_FAKER_LOCALE=en_US
+APP_LAYOUT=Aitilen
+USER_TYPE=Aitilen
+APP_VERSION=1.0.0
+
+APP_LOCALE=vi
+APP_FALLBACK_LOCALE=vi
+APP_FAKER_LOCALE=vi_VN
 
 APP_MAINTENANCE_DRIVER=file
 # APP_MAINTENANCE_STORE=database
@@ -20,12 +24,12 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=laravel
-# DB_USERNAME=root
-# DB_PASSWORD=
+DB_CONNECTION=mysql
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_DATABASE=aio
+DB_USERNAME=root
+DB_PASSWORD=12345678
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
