--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
         "concurrently": "^9.0.1",
         "dayjs": "^1.11.13",
         "framer-motion": "^12.23.12",
+        "frappe-gantt": "^1.0.4",
         "globals": "^15.14.0",
         "laravel-vite-plugin": "^2.0",
         "lodash": "^4.17.21",
