--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "typescript-eslint": "^8.23.0"
     },
     "dependencies": {
+        "@ant-design/charts": "^2.6.6",
         "@ant-design/icons": "^6.0.0",
         "@ant-design/plots": "^2.6.6",
         "@dnd-kit/core": "^6.3.1",
@@ -37,6 +38,7 @@
         "@dnd-kit/sortable": "^10.0.0",
         "@dnd-kit/utilities": "^3.2.2",
         "@headlessui/react": "^2.2.0",
+        "@hello-pangea/dnd": "^18.0.1",
         "@radix-ui/react-avatar": "^1.1.3",
         "@radix-ui/react-checkbox": "^1.1.4",
         "@radix-ui/react-collapsible": "^1.1.3",
@@ -69,7 +71,6 @@
         "qrcode.react": "^4.2.0",
         "react": "^18.3.1",
         "react-barcode": "^1.6.1",
-        "react-beautiful-dnd": "^13.1.1",
         "react-dom": "^18.3.1",
         "react-highlight-words": "^0.21.0",
         "react-router-dom": "^7.9.5",
