--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
         "dayjs": "^1.11.13",
         "framer-motion": "^12.23.12",
         "frappe-gantt": "^1.0.4",
+        "gantt-task-react": "^0.3.9",
         "globals": "^15.14.0",
         "laravel-vite-plugin": "^2.0",
         "lodash": "^4.17.21",
