--- a/package.json
+++ b/package.json
@@ -81,7 +81,8 @@
         "tailwindcss": "^4.0.0",
         "tailwindcss-animate": "^1.0.7",
         "vietqr": "^1.1.9",
-        "vite": "^7.0.4"
+        "vite": "^7.0.4",
+        "xlsx": "^0.18.5"
     },
     "optionalDependencies": {
         "@rollup/rollup-linux-x64-gnu": "4.9.5",
