--- a/package.json
+++ b/package.json
@@ -2,15 +2,17 @@
     "private": true,
     "type": "module",
     "scripts": {
-        "build": "node --max-old-space-size=2072 node_modules/vite/bin/vite.js build",
+        "build": "node --max-old-space-size=4096 --optimize-for-size --max-old-space-size=4096 --gc-interval=100 node_modules/vite/bin/vite.js build --mode production",
         "build:ssr": "vite build && vite build --ssr",
-        "dev": "vite",
+        "dev": "vite --host",
         "format": "prettier --write resources/",
         "format:check": "prettier --check resources/",
         "lint": "eslint . --fix",
-        "types": "tsc --noEmit"
+        "types": "tsc --noEmit",
+        "clean": "rm -rf node_modules/.vite && rm -rf public/build"
     },
     "devDependencies": {
+        "@babel/plugin-transform-react-jsx": "7.27.1",
         "@eslint/js": "^9.19.0",
         "@types/lodash": "^4.17.20",
         "@types/node": "^22.13.5",
@@ -61,6 +63,7 @@
         "clsx": "^2.1.1",
         "concurrently": "^9.0.1",
         "dayjs": "^1.11.13",
+        "es-toolkit": "1.42.0",
         "framer-motion": "^12.23.12",
         "frappe-gantt": "^1.0.4",
         "gantt-task-react": "^0.3.9",
