--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
         "build": "vite build",
         "build:ssr": "vite build && vite build --ssr",
         "dev": "vite --host",
+        "dev:all": "concurrently \"npm run dev\" \"php artisan serve\"",
         "format": "prettier --write resources/",
         "format:check": "prettier --check resources/",
         "lint": "eslint . --fix",
@@ -20,6 +21,7 @@
         "@types/react-beautiful-dnd": "^13.1.8",
         "@types/react-dom": "^19.2.2",
         "@types/react-router-dom": "^5.3.3",
+        "concurrently": "9.2.1",
         "eslint": "^9.17.0",
         "eslint-config-prettier": "^10.0.1",
         "eslint-plugin-react": "^7.37.3",
@@ -60,7 +62,6 @@
         "axios": "^1.11.0",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
-        "concurrently": "^9.0.1",
         "dayjs": "^1.11.13",
         "es-toolkit": "1.42.0",
         "framer-motion": "^12.23.12",
